# SIMDRasterizer

./: CMakeLists.txt  README.md
res/: sun.ply  tree.ply
src/: main.cpp  ply_importer.cpp  ply_importer.hpp  raster.cpp  raster.hpp  types.hpp
src/math/: mat.hpp  mat4.cpp  math.hpp  math_config.hpp  scalar.hpp  trigonometry.hpp  vec.hpp  vec2.cpp  vec3.cpp  vec4.cpp
